# CartER

./: .gitignore  404.html  README.md  arduinoMEGA_main.cpp  index.html  nonevenly_spaced_bins.py  pid_control.py  plot_results.txt  pyproject.toml  q_learning.py  q_learning_plot.py  q_learning_results.txt  results_history.txt  sitemap.xml  swingup_test.py  swingup_to_pid_demo.py
articles/: index.html
articles/handover_v1/: index.html
articles/introducing_carter/: index.html
building/: index.html
building/bom/: index.html
commander/: experiment.py  log.py  simexp_base.py  type_aliases.py  utils.py
commander/cli/: __init__.py  simexp_base.py
commander/ml/: configurations.py  constants.py  environment.py  ml_constants.py  tensorboard.py
commander/network/: __init__.py  network.py  network_constants.py  protocol.py  selectors.py  types.py  utils.py
controller/: platformio.ini
controller/src/: CommandAndControl.cpp  CustomAS5600.cpp  CustomAS5600.h  Experiment.cpp  I2CMultiplexer.cpp  I2CMultiplexer.h  Init.cpp  Init.h  Limits.cpp  Mode.h  PacketReactor.cpp  Protocol.cpp  Protocol.h  RotaryEncoder.cpp  RotaryEncoder.h  Steppers.cpp  (+2 more)
development/: index.html
notebooks/: PacketTests.ipynb  ptytest.ipynb  simulation_action_testing.ipynb
search/: search_index.json
testing/: PID_test.py  Q_learning.ipynb  general_simulation.py  miniDQN.py  msft_bonsai_cartpole.py  simulation.py  simulation1.py  simulation_BOUNCE.py  simulation_cartpole_stepper.py  test.py  train.py  train_BOUNCE.py  train_new.py  train_sb3.py
usage/: index.html
videos/: index.html
(+15 files in other folders)
