[tool.poetry]
name = "CartER-single"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
gym = "0.21.0"
pyserial = "^3.5"
scipy = "^1.9.0"
stable-baselines3 = "^1.6.0"
pyglet = "^1.5.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
